Floats picture left and fixes alignment issues

--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,8 @@ body {
     margin: auto;
     float: none;
 }
+
+#pic {
+    float: left;
+    padding: 0 40px 0 20px
+}
